<resources>
    <string name="app_name">Agenda</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="preco">Preço</string>
    <string name="marca">Marca</string>
    <string name="email">E-mail</string>
    <string name="salvar_aluno">Salvar o aluno</string>
    <string name="salvar_compra">Salvar a compra</string>
    <string name="salvar_selecao">Salvar a seleção</string>
    <string name="remover">Remover</string>
</resources>
