<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">

            <ImageView
                android:id="@+id/activity_formulario_compra_foto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/compraicon" />
            <Button
                android:id="@+id/activity_formulario_compra_botao_foto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/camera"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"/>

        </RelativeLayout>



        <EditText
            android:id="@+id/activity_formulario_compra_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nome"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/activity_formulario_compra_preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/preco"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/activity_formulario_compra_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/marca"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            tools:targetApi="o" />

    </LinearLayout>

</ScrollView>